<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="occasion"
            type="com.stho.cantate.Sunday" />
        <variable
            name="dominica"
            type="com.stho.cantate.CatholicDominica" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@{occasion.getDateAsString(), default=`Mittwoch 8. Okt. 2019`}"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textViewSunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:text="@{dominica.getFriendlyName(), default=`3. Sonntag nach Trinitatis`}"
                app:layout_constraintTop_toBottomOf="@id/textViewToday"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCatholic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:elevation="3dp"
                app:cardCornerRadius="3dp"
                app:layout_constraintTop_toBottomOf="@id/textViewSunday">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/labelLiturgicalYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/colorFaint"
                        android:text="@string/label_liturgical_year"
                        />

                    <TextView
                        android:id="@+id/textViewLiturgicalYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:textColor="@color/colorFaint"
                        app:layout_constraintTop_toTopOf="@id/labelLiturgicalYear"
                        app:layout_constraintStart_toEndOf="@id/labelLiturgicalYear"
                        android:text="@{occasion.getCatholicLiturgicalYearAsString(), default=`A`}"
                        />

                    <TextView
                        android:id="@+id/textViewTempus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:textColor="@color/colorFaint"
                        app:layout_constraintTop_toBottomOf="@id/labelLiturgicalYear"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@{dominica.getTempus(), default=`Tempus Per Annum`}"
                        />

                    <TextView
                        android:id="@+id/textViewDominica"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        app:layout_constraintTop_toBottomOf="@id/textViewTempus"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@{dominica.getName(), default=`Hebdomada I Adventus`}"
                        />

                    <TextView
                        android:id="@+id/labelIntroitus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="10sp"
                        app:layout_constraintTop_toBottomOf="@id/textViewDominica"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/label_introitus"
                        android:visibility="@{dominica.hasIntroitus() ? View.VISIBLE : View.GONE}"
                        />

                    <TextView
                        android:id="@+id/textViewIntroitus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        app:layout_constraintTop_toBottomOf="@id/labelIntroitus"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/colorIntroitus"
                        android:text="@{dominica.getIntroitus(occasion.getCatholicLiturgicalYear()), default=`Ad te levavi anima mea`}"
                        android:visibility="@{dominica.hasIntroitus() ? View.VISIBLE : View.GONE}"
                        />

                    <TextView
                        android:id="@+id/textViewOthers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="10sp"
                        app:layout_constraintTop_toBottomOf="@id/textViewIntroitus"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/colorPrimary"
                        android:text="@{dominica.getOthers(), default=`Alleluia`}"
                        android:visibility="@{dominica.hasOthers() ? View.VISIBLE : View.GONE}"
                        />

                    <TextView
                        android:id="@+id/labelCommunio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="10sp"
                        app:layout_constraintTop_toBottomOf="@id/textViewOthers"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/label_communio"
                        android:visibility="@{dominica.hasCommunio() ? View.VISIBLE : View.GONE}"
                        />

                    <TextView
                        android:id="@+id/textViewCommunio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        app:layout_constraintTop_toBottomOf="@id/labelCommunio"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@color/colorCommunio"
                        android:text="@{dominica.getCommunio(occasion.getCatholicLiturgicalYear()), default=`Lux aeterna luceat eis Domine et sanctus tuus in aeternum quia pius es`}"
                        android:visibility="@{dominica.hasCommunio() ? View.VISIBLE : View.GONE}"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>

